# IR-Image-Classification-System

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PROJECT_STRUCTURE.md  README.md  TECHNICAL_DOCUMENTATION.md  app.py  pyproject.toml  pytest.ini  requirements.txt  test_basic_training.py  test_training_pipeline_comprehensive.py
.kiro\specs\ir-image-classification/: design.md  requirements.md  tasks.md
cache/: README.md
checkpoints/: README.md
config/: README.md  settings.py  test_config.json  vector_db_config.json
data/: README.md
data/vector_db/87730a90-197b-40d5-b453-221fdf7fec0f/: index_metadata.pickle
data/vector_db/f2b3f8a8-a75e-4baa-860c-e23b1c4be13e/: index_metadata.pickle
docs/: PROJECT_STRUCTURE.md  README.md  TECHNICAL_DOCUMENTATION.md  data_module.md  database_module.md  embedding_module.md  fine_tuning_module.md  models_module.md  query_module.md  scripts.md  streamlit_app.md  training_module.md
examples/: README.md  query_processor_examples.py  ranking_confidence_examples.py
results/: README.md  arm_car_query_results.json  bakery_query_results.json  camp_query_results.json  hawk_query_results.json  jeep_1_query_results.json  missile_1_query_results.json  mse_terminal_query_results.json  pickup_query_results.json  quick_improvements_report.txt  sa6_query_results.json  satellite_query_results.json  scud_tel_query_results.json  tank_1_query_results.json  tank_2_query_results.json  tnshdrad_query_results.json  truck_query_results.json
scripts/: README.md  __init__.py  augmentation.py  diagnose_score_consistency.py  enhanced_fine_tuning.py  fix_score_consistency.py  fix_similarity_confidence.py  init_database.py  optimize_dataset.py  populate_database.py  quick_improvements.py  run_mission.py  test_different_queries.py  test_improvements.py  test_military_pipeline.py  test_query_processor.py  test_ranking_confidence.py  train_improved_model.py
src/: README.md  __init__.py
src/data/: __init__.py  augmentation.py  image_loader.py  image_optimizer.py  ir_processor.py
src/database/: __init__.py  db_manager.py  index_manager.py  similarity_searcher.py  vector_store.py
src/embedding/: __init__.py  extractor.py
src/fine_tuning/: model_optimizer.py
src/models/: __init__.py  data_models.py  interfaces.py  object_classes.py
src/query/: __init__.py  confidence.py  config.py  processor.py  ranker.py
src/training/: __init__.py  model_adapters.py  model_config.py  trainer.py  validation_pipeline.py
tests/: README.md  __init__.py  test_augmentation.py  test_basic_training.py  test_comprehensive.py  test_database_connection.py  test_embedding_extractor.py  test_index_manager.py  test_index_manager_simple.py  test_ir_processing.py  test_performance_optimizations.py  test_run_mission_script.py  test_training_pipeline.py  test_training_pipeline_comprehensive.py  test_vector_database_integration.py
